--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tanstack/react-query": "^5.51.23",
     "antd": "^5.18.0",
     "antd-img-crop": "^4.22.0",
     "axios": "^1.7.2",
